--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
-
+.cdk.json
 .npmrc
 
 # IDE files
 .idea
 .vscode
+*.log
+*~
+/.eslintcache
