--- a/package.json
+++ b/package.json
@@ -8,31 +8,60 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:watch": "esw . --ext .js,.jsx,.ts,.tsx -w --changed --clear",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.110.0",
-    "@semantic-release/changelog": "5.0.1",
-    "@semantic-release/commit-analyzer": "8.0.1",
-    "@semantic-release/git": "9.0.0",
-    "@types/jest": "26.0.23",
-    "@types/node": "10.17.60",
-    "aws-cdk": "1.110.0",
-    "husky": "4.3.8",
-    "jest": "27.0.5",
-    "lint-staged": "11.0.0",
-    "prettier": "2.3.1",
-    "semantic-release": "17.4.4",
-    "ts-jest": "27.0.3",
-    "ts-node": "9.1.1",
-    "typescript": "4.3.4"
+    "@aws-cdk/assert": "2.23.0",
+    "@commitlint/cli": "16.2.4",
+    "@commitlint/config-angular": "16.2.4",
+    "@commitlint/config-conventional": "16.2.4",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
+    "aws-cdk": "2.23.0",
+    "@typescript-eslint/parser": "5.23.0",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@types/node": "17.0.32",
+    "@types/jest": "27.5.1",
+    "eslint": "8.15.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "26.1.5",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "^8.0.1",
+    "jest": "28.1.0",
+    "jest-sonar-reporter": "2.0.0",
+    "lint-staged": "12.4.1",
+    "madge": "5.0.1",
+    "prettier": "2.6.2",
+    "semantic-release": "19.0.3",
+    "ts-jest": "28.0.2",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-dms": "1.110.0",
-    "@aws-cdk/aws-ec2": "1.110.0",
-    "@aws-cdk/aws-iam": "1.110.0",
-    "@aws-cdk/aws-sns": "1.110.0",
-    "@aws-cdk/aws-ssm": "1.110.0",
-    "@aws-cdk/core": "1.110.0"
+    "aws-cdk-lib": "2.23.0",
+    "cdk-assets": "2.23.0",
+    "constructs": "10.1.1",
+    "cdk-nag": "2.14.0",
+    "npm": "8.11.0",
+    "promptly": "3.2.0",
+    "source-map-support": "0.5.21"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
+
